@@ -1,3 +1,7 @@
+2007-04-28  Oliver Hader  <oh@inpublica.de>
+
+	* Fixed bug #5519: EM - Some input fields don't have real labels yet (thanks to Oliver Klee)
+
 2007-04-28  Michael Stucki  <michael@typo3.org>
 
 	* Fix bug in TypoScript object browser: New keys were not added when pressing the return key in the update form instead of clicking the submit button.
